# dataclay-restful

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  rest_config.py
dataclay_restful/: __main__.py  settings.py
dataclay_restful/services/dataclay/: dependency.py  lifetime.py
dataclay_restful/services/metadata_service/: dependency.py  lifetime.py
dataclay_restful/web/: application.py  lifetime.py
dataclay_restful/web/api/: router.py
dataclay_restful/web/api/Dynamic/: __init__.py  views.py
dataclay_restful/web/api/Person/: __init__.py  schema.py  views.py
dataclay_restful/web/api/dynamic/: __init__.py  views.py
dataclay_restful/web/api/echo/: __init__.py  views.py
dataclay_restful/web/api/monitoring/: __init__.py
dataclay_restful/web/api/resources/: __init__.py  schema.py  views.py
